--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "firebase": "^3.7.0",
+    "lodash": "^4.17.4",
     "react": "~15.4.1",
     "react-native": "0.42.0",
     "react-native-router-flux": "^3.38.0",
